--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,19 @@
   <body>
     <div id="root">
       <!-- Navigator -->
-      <!-- <a name="Home">
-        <nav class="navbar fixed-top navbar-expand-lg"></nav>
-      </a> -->
+
+      <nav class="navbar fixed-top navbar-expand-lg"><a name="Home"></a></nav>
+
+      <!-- Carousel -->
+
+      <div
+        id="carousel"
+        class="carousel slide"
+        data-bs-ride="carousel"
+
+      ></div>
+
+      <!-- Infoblocks -->
       <div id="infoblock"></div>
 
       <button>
